# zsh-flutter

./: .bumplus.toml  .editorconfig  .env-sample  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  .prettierignore  .tmuxinator.yml  .todocheck.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  package.json  pyproject.toml  setup.cfg  sonar-project.properties  zsh-flutter.zsh
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  markdown-link-config.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/linters/: .gitleaks.toml
.github/workflows/: confluence.yml  lint.yml
config/: base.zsh  linux.zsh  main.zsh  osx.zsh
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  faq.md  functions.md  index.md  releasing.md  roadmap.md  support.md  testing.md  troubleshooting.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
docs/source/: CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst
internal/: base.zsh  linux.zsh  main.zsh  osx.zsh
pkg/: base.zsh  main.zsh
pkg/flutter/: base.zsh  helper.zsh  linux.zsh  main.zsh  osx.zsh
pkg/pub/: base.zsh  main.zsh  package.zsh
provision/docker-compose/: dev.yml  test.yml
provision/generator/: README.yaml
provision/generators/: README.yaml
provision/task/: confluence.yml  docker.yml  go.yml  mark.yml  sonar.yml
provision/templates/: README.tpl.md
tests/: test_bake_project.py  test_config.zunit
(+6 files in other folders)
